Change god card assigner so that players get unique god cards (no duplicates)